hphp/hack/test/typecheck/global_const24.php.exp
File "global_const24.php", line 3, characters 11-12:
Invalid expression in constant initializer (Parsing[1002])
